<resources>
    <string name="app_name">PBA-GreenSpots</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre">Nombre Completo</string>
    <string name="pais">Pais</string>
    <string name="email">Email</string>
    <string name="contrasenia">Contraseña</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="btnComenzar">Comenzar</string>
    <string name="imagen_perfil">Imagen_Perfil</string>
    <string name="bienvenido_a">BIENVENIDO/A</string>
    <string name="complete_el_formulario">Por favor, complete el formulario de registracion</string>
    <string-array name="ABM">
        <item>Alta</item>
        <item>Baja</item>
        <item>Modificacion</item>
    </string-array>
    <string name="msg_campoIncompleto">Campo obligatorio incompleto!</string>
    <string name="msg_Alta_ReservaNatural_Exito">Se ha registrado con exito!</string>
    <string name="msg_Alta_ReservaNatural_Error">ERROR. No pudimos guardar su registro!</string>
    <string name="msg_Baja_ReservaNatural_Exito">Se ha eliminado con exito:</string>
    <string name="msg_Baja_ReservaNatural_Error">No se ha podido eliminar el recurso solicitado:</string>
    <string name="msg_Modificacion_ReservaNatural_Exito">Se ha actualizado con exito.</string>
    <string name="msg_Modificacion_ReservaNatural_Error">No se ha podido actualizar el recurso solicitado.</string>
    <string name="phone">11-1111-1111</string>
    <string name="resenas">Comentarios</string>
    <string name="logogreenspots">pba green spots</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="msg_Alta_Ok">Alta ok</string>
    <string name="msg_Alta_Error">Hubo un error en el alta</string>
    <string name="msg_Baja_OK">Baja ok</string>
    <string name="msg_Baja_Error">Hubo un error en la baja</string>
    <string name="msg_Modificacion_Ok">¡Modificación exitosa!</string>
    <string name="msg_Modificacion_Error">Hubo un error en la modificación</string>
    <string-array name="MUNICIPIOS">
        <item>25 de mayo</item>
        <item>Adolfo Alsina</item>
        <item>Adolfo González Chavez</item>
        <item>Alberti</item>
        <item>Almirante Brown</item>
        <item>Arrecifes</item>
        <item>Avellaneda</item>
        <item>Ayacucho</item>
        <item>Azul</item>
        <item>Bahía Blanca</item>
        <item>Balcarce</item>
        <item>Baradero</item>
        <item>Beníto Juarez</item>
        <item>Berazategui</item>
        <item>Berisso</item>
        <item>Bolívar</item>
        <item>Bragado</item>
        <item>Campana</item>
        <item>Cañuelas</item>
        <item>Capitan Sarmiento</item>
        <item>Carlos Casares</item>
        <item>Carlos Tejedor</item>
        <item>Carmen De Areco</item>
        <item>Castelli</item>
        <item>Chacabuco</item>
        <item>Chascomus</item>
        <item>Chivilcoy</item>
        <item>Colón</item>
        <item>Coronel Brandsen</item>
        <item>Coronel Bogado</item>
        <item>Coronel Leonardo</item>
        <item>Rosales</item>
        <item>Coronel Pringles</item>
        <item>Coronel Suarez</item>
        <item>Daireaux</item>
        <item>Dolores</item>
        <item>Ensenada</item>
        <item>Escobar</item>
        <item>Esteban Echeverria</item>
        <item>Exaltacion De La Cruz</item>
        <item>Ezeiza</item>
        <item>Florencio Varela</item>
        <item>Florentino Ameghino</item>
        <item>General Alvarado</item>
        <item>General Alvear</item>
        <item>General Arenales</item>
        <item>General Belgrano</item>
        <item>General Guido</item>
        <item>General Juan Madariaga</item>
        <item>General Lamadrid</item>
        <item>General Las Heras</item>
        <item>General Lavalle</item>
        <item>General Paz</item>
        <item>General Pinto</item>
        <item>General Pueyrredon</item>
        <item>General Rodriguez</item>
        <item>General San Martin</item>
        <item>General Viamonte</item>
        <item>General Villegas</item>
        <item>Gobierno de la Ciudad</item>
        <item>Guamini</item>
        <item>Hipolito Yrigoyen</item>
        <item>Hurlingham</item>
        <item>Ituzaingo</item>
        <item>José C. Paz</item>
        <item>Junin</item>
        <item>La Costa</item>
        <item>La Matanza</item>
        <item>La Plata</item>
        <item>Lanus</item>
        <item>Laprida</item>
        <item>Las Flores</item>
        <item>Leandro N. Alem</item>
        <item>Lincoln</item>
        <item>Loberia</item>
        <item>Lobos</item>
        <item>Lomas de Zamora</item>
        <item>Lujan</item>
        <item>Magdalena</item>
        <item>Maipu</item>
        <item>Malvinas Argenitnas</item>
        <item>Mar Chiquita</item>
        <item>Marcos Paz</item>
        <item>Mercedes</item>
        <item>Merlo</item>
        <item>Monte</item>
        <item>Monte Hermoso</item>
        <item>Moreno</item>
        <item>Moron</item>
        <item>Navarro</item>
        <item>Necochea</item>
        <item>Nueve de Julio</item>
        <item>Olavarria</item>
        <item>Patagones</item>
        <item>Pehuajo</item>
        <item>Pellegrini</item>
        <item>Pergamino</item>
        <item>Pila</item>
        <item>Pilar</item>
        <item>Pinamar</item>
        <item>Presidente Peron</item>
        <item>Puan</item>
        <item>Punta Indio</item>
        <item>Quilmes</item>
        <item>Ramallo</item>
        <item>Rauch</item>
        <item>Rivadavia</item>
        <item>Rojas</item>
        <item>Roque Perez</item>
        <item>Saavedra</item>
        <item>Saladillo</item>
        <item>Salliquelo</item>
        <item>Salto</item>
        <item>San Andres de Giles</item>
        <item>San Antonio de Areco</item>
        <item>San Cayetano</item>
        <item>San Fernando</item>
        <item>San Isidro</item>
        <item>San Miguel Joaquin</item>
        <item>San Nicolas</item>
        <item>San Pedro</item>
        <item>San Vicente</item>
        <item>Suipacha</item>
        <item>Tandil</item>
        <item>Tapalque</item>
        <item>Tigre</item>
        <item>Tordillo</item>
        <item>Tornquist</item>
        <item>Trenque launquen</item>
        <item>Tres Arroyos</item>
        <item>Tres de Febrero</item>
        <item>Tres Lomas</item>
        <item>Vicente Lopez</item>
        <item>Villa Gesell</item>
        <item>Villarino</item>
    </string-array>
    <string-array name="TIPO_ADMINISTRACION">
        <item>Publico/Public</item>
        <item>Privado/Private</item>
        <item>Mixto</item>
    </string-array>
    <string-array name="COSTO">
        <item>Gratuito/Free</item>
        <item>Pago/Paid</item>
    </string-array>
    <string-array name="NIVELES_DIFICULTAD">
        <item>Facil/Easy</item>
        <item>Media/Medium</item>
        <item>Dificil/Hard</item>
    </string-array>
    <string-array name="SENIALIZACION_DE_SENDEROS">
        <item>No</item>
        <item>Si</item>
    </string-array>
    <string-array name="ZONA_DE_SERVICIOS">
        <item>No</item>
        <item>Si</item>
    </string-array>
    <string name="comentarios">20</string>
    <string name="senderos_recorridos">Senderos Recorridos</string>
    <string name="todo">TODO</string>
    <string name="msg_cierre">¿Quiere cerrar sesion?</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
</resources>