<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Registro2">

    <TextView
        android:id="@+id/nombre"
        android:layout_width="217dp"
        android:layout_height="43dp"
        android:hint="@string/nombre"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63" />

    <TextView
        android:id="@+id/email"
        android:layout_width="207dp"
        android:layout_height="41dp"
        android:hint="@string/email"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="194dp" />

    <TextView
        android:id="@+id/password"
        android:layout_width="205dp"
        android:layout_height="39dp"
        android:layout_marginTop="96dp"
        android:hint="@string/contrasenia"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/pais"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/pais"
        android:layout_width="225dp"
        android:layout_height="43dp"
        android:layout_marginBottom="276dp"
        android:hint="@string/pais"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/boton_registro_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/registrarse"
        android:text="Button"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="469dp" />

</androidx.constraintlayout.widget.ConstraintLayout>