<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".fragments.LogOutFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:elevation="15dp"
        android:backgroundTint="@color/colorPrimario"
        app:cardCornerRadius="30dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="35dp"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:text="@string/msg_cierre"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <Button
                android:id="@+id/logoutCancelar"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/default_hint"
                android:text="@string/cancelar"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/logoutAceptar"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:backgroundTint="#314BF3"
                android:onClick="onClickLogOut"
                android:textColor="@color/white"
                android:text="@string/aceptar" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>