<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragments.PerfilUsuarioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="350dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical"
                android:background="@color/colorAcent">

                <androidx.cardview.widget.CardView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="35dp"
                    android:foregroundGravity="center_horizontal"
                    app:cardCornerRadius="50dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/avatar"
                        tools:ignore="ImageContrastCheck"
                        android:contentDescription="TODO" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/textViewFullname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#fff"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textSize="30dp"/>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_centerHorizontal="true"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="3"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/resenas"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/resenas"
                            android:textSize="17dp"
                            android:textStyle="italic"
                            android:textColor="#222121"/>
                        <TextView
                            android:id="@+id/cant_resenas"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/comentarios"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            android:textColor="#575656"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/senderos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/senderos_recorridos"
                            android:textSize="17dp"
                            android:textStyle="italic"
                            android:textColor="#222121"/>
                        <TextView
                            android:id="@+id/cant_senderos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="3"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            android:textColor="#575656"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/areas"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Areas Visitadas"
                            android:textSize="17dp"
                            android:textStyle="italic"
                            android:textColor="#222121"/>
                        <TextView
                            android:id="@+id/cant_areas"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="15"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            android:textColor="#575656"/>
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="25dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_email"/>
                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#000"
                    android:textSize="20dp"
                    android:paddingLeft="15dp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="25dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_place"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:id="@+id/textViewCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#000"
                    android:textSize="20dp"
                    android:paddingLeft="15dp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="25dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_key"/>
                <TextView
                    android:id="@+id/textViewPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#000"
                    android:textSize="20dp"
                    android:paddingLeft="15dp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="25dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_phone"/>
                <TextView
                    android:id="@+id/textViewPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="#000"
                    android:textSize="20dp"
                    android:paddingLeft="15dp"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</ScrollView>
